language/move-prover/tests/sources/functional/references.exp
Move prover returns: exiting with boogie verification errors
error: function does not abort under this condition

    ┌── tests/sources/functional/references.move:76:9 ───
    │
 76 │         aborts_if true;
    │         ^^^^^^^^^^^^^^^
    │
    =     at tests/sources/functional/references.move:69: mut_ref_incorrect
    =         b = <redacted>
    =     at tests/sources/functional/references.move:70: mut_ref_incorrect
    =         b_ref = <redacted>
    =     at tests/sources/functional/references.move:71: mut_ref_incorrect
    =     at tests/sources/functional/references.move:50: mut_b
    =         b = <redacted>
    =     at tests/sources/functional/references.move:51: mut_b
    =         b = <redacted>
    =     at tests/sources/functional/references.move:52: mut_b
    =     at tests/sources/functional/references.move:72: mut_ref_incorrect
    =         b = <redacted>
    =     at tests/sources/functional/references.move:73: mut_ref_incorrect
    =     at tests/sources/functional/references.move:74: mut_ref_incorrect
    =     at tests/sources/functional/references.move:76
